--- a/src/chat/Chat.module.css
+++ b/src/chat/Chat.module.css
@@ -3,7 +3,7 @@
   max-width: 400px;
   margin: 20px auto;
   border: 1px solid #ccc;
-  border-radius: 8px;
+  border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -17,7 +17,19 @@
   align-items: center;
   justify-content: space-between;
 }
+.tab_option {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  gap: 0.2rem;
+}
+
+.input_field {
+  outline: none;
+}
 .listen_btn {
+  margin-top: 1rem;
   padding: 0.5rem;
   display: flex;
   align-items: center;
@@ -52,6 +64,24 @@
   overflow-y: auto;
   max-height: 300px;
   padding: 10px;
+  /* overflow: auto; */
+  scrollbar-width: thin; /* For Firefox */
+}
+
+div.chat-messages::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Set styles for the scrollbar track */
+div.chat-messages::-webkit-scrollbar-track {
+  background-color: var(--bot-msg);
+  background-color: #fff;
+}
+
+/* Set styles for the scrollbar thumb */
+div.chat-messages::-webkit-scrollbar-thumb {
+  background-color: var(--main-color-100);
+  border-radius: 5px;
 }
 .new {
 }
@@ -68,23 +98,40 @@
 }
 .user {
   /* background-color: #000; */
-  margin-right: 0;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-end; */
   color: #fff;
-  background-color: green;
+  background-color: var(--user-msg);
   padding: 0.5rem 1rem;
-  border-radius: 1rem;
+  border-radius: 10px;
+}
+.time {
+  align-self: flex-start;
+  font-size: 10px;
+  padding: 2px;
+}
+.time-user {
+  align-self: flex-end;
+  font-size: 10px;
+  padding: 2px;
 }
 .user-icon {
   /* padding: 0.5rem 1rem;
   border-radius: 1rem; */
-  margin-bottom: 0.5rem;
-  color: #fff;
-  display: flex;
+  /* display: flex;
+  flex-direction: column; */
   /* align-items: center; */
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 0.5rem;
+  margin-right: 0;
+  max-width: 80%;
+
+  /* color: #fff; */
   right: 0;
   /* margin-left: 10px; */
 }
@@ -102,15 +149,25 @@
   justify-content: center;
   border-radius: 50%;
 }
+.bot-container {
+  display: flex;
+}
 .bot-icon {
   margin-left: 10px;
-  background-color: pink;
+  max-width: 80%;
   padding: 0.5rem 1rem;
-  border-radius: 1rem;
   margin-right: 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.bot-msg {
+  align-self: flex-start;
+  border-radius: 1rem;
+  background-color: var(--bot-msg);
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
 }
 /* .bot .bot-icon {
   margin-left: 10px;
@@ -125,24 +182,36 @@
 .chat-input {
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 10px;
 }
 
 .chat-input input {
   flex: 1;
-  padding: 8px;
+  padding: 15px;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 7px;
   margin-right: 10px;
 }
 
 .chat-input button {
-  background-color: #007bff;
-  color: #fff;
+  /* color: var(--main-color-100); */
+  /* background-color: #fff; */
   border: none;
-  padding: 8px 12px;
-  border-radius: 4px;
   cursor: pointer;
+  border-radius: 50%;
+  background-color: var(--main-color-100);
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.chat-input button > svg {
+  width: 24px;
+  height: 24px;
+  color: #fff;
 }
 
 /* Customize styles further as needed */
