--- a/src/chat/Chat.module.css
+++ b/src/chat/Chat.module.css
@@ -61,7 +61,8 @@
 }
 
 .chat-messages {
-  overflow-y: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
   max-height: 300px;
   padding: 10px;
   /* overflow: auto; */
@@ -151,6 +152,7 @@ div.chat-messages::-webkit-scrollbar-thumb {
 }
 .bot-container {
   display: flex;
+  max-width: 90%;
 }
 .bot-icon {
   margin-left: 10px;
