--- a/src/chat/Chat.module.css
+++ b/src/chat/Chat.module.css
@@ -1,6 +1,104 @@
-/* Add this CSS to your stylesheets or use a CSS-in-JS solution */
+/* ------------------------------------------------------New section --------------------------- */
+.home_header {
+  display: flex;
+  position: relative;
+  gap: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem;
+}
+.dropdown-content {
+  padding: 1rem;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 90%;
+  right: 0;
+  background-color: #f9f9f9;
+  background-color: #4a69bd;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  border-radius: 15px;
+  gap: 1rem;
+}
+.dropdown-link {
+  padding: 10px 10px;
+  width: 100%;
+  color: #111827; /* Default color */
+  text-decoration: none;
+}
+.dropdown-link:hover {
+  width: 100%;
+  text-decoration: none;
+  background-color: #007bff;
+  color: #111827;
+  background-color: #fff;
+}
+/* .dropdown-link:visited {
+  color: #ff4500;
+} */
+/* .dropdown-content span {
+  width: auto;
+
+  padding: 10px 10px;
+  margin-top: 0;
+  margin-bottom: 0;
+} */
+/* .dropdown-content span:hover {
+  
+  padding: 10px 10px;
+  color: #fff;
+} */
+.header_bot_img {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+}
+.header_img_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.options_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  border: 1px solid #000;
+}
+.option_dot {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #000;
+}
+.home_container {
+  background-color: #f9fafb;
+  background-color: #e0f2fe;
+  background: linear-gradient(to right, #e0f2fe, #ffffff);
+  background: var(--main-color-100);
+  padding: 1rem;
+}
+.bot-img {
+  display: block;
+  /* width: 100%; */
+  height: auto;
+  border: 1px solid #e0f2fe;
+  border: 5px solid rgba(224, 242, 254, 0.5);
+  filter: blur(1px);
+}
+/* -----------------------------------------------------------New section------------------------------------- */
 .chat-container {
-  max-width: 400px;
+  /* max-width: 400px; */
+  width: 90%;
   margin: 20px auto;
   border: 1px solid #ccc;
   border-radius: 20px;
