--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -29,6 +29,7 @@
 }
 .dropdown-link:hover {
   width: 100%;
+  text-decoration: none;
   background-color: #007bff;
   color: #111827;
   background-color: #fff;
