--- a/src/chat/Chat.module.css
+++ b/src/chat/Chat.module.css
@@ -17,6 +17,7 @@
   right: 0;
   background-color: #f9f9f9;
   background-color: #4a69bd;
+  background-color: var(--main-color-100);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1000;
@@ -24,9 +25,13 @@
   gap: 1rem;
 }
 .dropdown-link {
-  padding: 10px 10px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 7px 7px;
   width: 100%;
-  color: #111827; /* Default color */
+  color: #111827;
+  color: #fff;
   text-decoration: none;
 }
 .dropdown-link:hover {
@@ -35,6 +40,7 @@
   background-color: #007bff;
   color: #111827;
   background-color: #fff;
+  border-radius: 5px;
 }
 /* .dropdown-link:visited {
   color: #ff4500;
@@ -137,6 +143,7 @@
   border: 0;
   color: #fff;
   border-radius: 0.3rem;
+  cursor: pointer;
 }
 .voice_container {
   display: flex;
