--- a/src/components/gallery/Gallery.module.css
+++ b/src/components/gallery/Gallery.module.css
@@ -215,31 +215,40 @@
   padding: 1rem;
 }
 .dropdown-content {
-  padding: 1rem;
+  padding-top: 1rem 2rem;
   height: auto;
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 90%;
-  right: 0;
+  padding-top: 0.5rem;
+  top: 80%;
+  right: 5px;
   background-color: #f9f9f9;
   background-color: #4a69bd;
-  min-width: 160px;
+  background-color: var(--main-color-100);
+  min-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1000;
-  border-radius: 15px;
-  gap: 1rem;
+  border-radius: 5px;
+  gap: 0.5rem;
 }
 .dropdown-link {
-  padding: 10px 10px;
-  width: 100%;
+  padding: 5px 7px;
+  /* width: 100%; */
   color: #111827; /* Default color */
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  /* justify-content: center; */
+  color: #fff;
   text-decoration: none;
 }
 .dropdown-link:hover {
-  width: 100%;
+  /* width: 100%; */
   text-decoration: none;
   background-color: #007bff;
+  border-radius: 5px;
+
   color: #111827;
   background-color: #fff;
 }
