--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -15,6 +15,7 @@
   right: 0;
   background-color: #f9f9f9;
   background-color: #4a69bd;
+  background-color: var(--main-color-100);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1000;
@@ -22,9 +23,13 @@
   gap: 1rem;
 }
 .dropdown-link {
-  padding: 10px 10px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 7px 7px;
   width: 100%;
   color: #111827; /* Default color */
+  color: #fff;
   text-decoration: none;
 }
 .dropdown-link:hover {
@@ -33,6 +38,7 @@
   background-color: #007bff;
   color: #111827;
   background-color: #fff;
+  border-radius: 5px;
 }
 /* .dropdown-link:visited {
   color: #ff4500;
@@ -241,7 +247,8 @@
 }
 .footer_msg {
   color: #4a69bd;
-  margin-top: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
   text-align: center;
   font-style: italic;
 }
