--- a/src/components/videos/Videos.module.css
+++ b/src/components/videos/Videos.module.css
@@ -78,6 +78,8 @@
   right: 0;
   background-color: #f9f9f9;
   background-color: #4a69bd;
+  background-color: var(--main-color-100);
+  background-color: rgba(15, 4, 54, 0.99);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1000;
@@ -85,9 +87,13 @@
   gap: 1rem;
 }
 .dropdown-link {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   padding: 10px 10px;
   width: 100%;
-  color: #111827; /* Default color */
+  color: #111827;
+  color: #fff;
   text-decoration: none;
 }
 .dropdown-link:hover {
